<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="facebook_app_id">652540274852758</string>
    <string name="facebook_login">"   Log in with the Facebook Account  "</string>
    <string name="kakao_app_key">41ef00b068314b2c961dbcc0c77ffe86</string>
    <string name="kakao_login">Login with Kakao</string>
    <string name="app_name">AniCare</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="second_ago">sec ago</string>
    <string name="minute_ago">min ago</string>
    <string name="hour_ago">hour ago</string>
    <string name="day_ago">day ago</string>
    <string name="yesterday">Yesterday</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="user_setting_name">이름</string>
    <string name="user_setting_location">위치</string>
    <string name="user_setting_living_type">주거 형태</string>
    <string name="user_setting_is_pet">펫 유무</string>
    <string name="user_setting_self_intro">자기 소개</string>
    <string name="pet_setting_name">펫 이름</string>
    <string name="pet_setting_category">카테고리</string>
    <string name="pet_setting_size">크기</string>
    <string name="pet_setting_talent">성격</string>
    <string name="pet_setting_sex">성별</string>
    <string name="pet_setting_normalize">중성화</string>
    <string name="pet_setting_feed">사료</string>
    <string name="yes">유</string>
    <string name="no">무</string>
    <string name="UserSetting">사용자 정보 설정</string>
    <string name="PetSetting">마이펫 정보 설정</string>
    <string name="Logout">로그아웃</string>
    <string name="Exit">탈퇴</string>


    <string name="select_picture">Select Picture</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="anicare_menu">
        <item>친구 보기</item>
        <item>친구 만들기</item>
        <item>메세지함</item>
        <item>돌봄 이력</item>
        <item>설정</item>
    </string-array>

    <string-array name="pet_category">
        <item>개</item>
        <item>고양이</item>
        <item>새</item>
        <item>기타</item>
    </string-array>

    <string-array name="user_living_type">
        <item>단독주택</item>
        <item>아파트</item>
        <item>오피스텔</item>정
        <item>기타</item>
     </string-array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>

    <string-array name="gender_types">
        <item>Female</item>
        <item>Male</item>
    </string-array>

    <string name="title_activity_user_setting">사용자 정보 설정</string>
    <string name="title_activity_pet_setting">마이펫 정보 설정</string>
    <string name="title_activity_pet_detail">친구 자세히 보기</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="item_yes">Yes</string>
    <string name="item_no">No</string>
    <string name="item_confirm">확인</string>
    <string name="item_cancle">취소</string>
    <string name="item_remove">삭제</string>
    <string name="item_large">대</string>
    <string name="item_medium">중</string>
    <string name="item_small">소</string>
    <string name="item_male">수컷</string>
    <string name="item_female">암컷</string>
    <string name="item_bright">활발함</string>
    <string name="item_normal">보통</string>
    <string name="item_shy">내성적임</string>
    <string name="period">돌봄기간</string>
    <string name="friend_request">서비스 요청</string>
    <string name="send_message">메세지 보내기</string>
    <string name="item_dog">개</string>
    <string name="item_cat">고양이</string>
    <string name="item_bird">새</string>
    <string name="item_default">기타</string>
    <string name="user_phone_number">전화번호</string>

</resources>
