<PreferenceScreen  xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- opens a subscreen of settings -->
    <PreferenceScreen
        android:key="user_setting_category_key"
        android:title="@string/UserSetting"
        android:persistent="false"
        android:defaultValue="TEST">
    </PreferenceScreen>
    <PreferenceScreen
        android:key="pet_setting_category_key"
        android:title="@string/PetSetting"
        android:persistent="false">
    </PreferenceScreen>
    <PreferenceScreen
        android:key="logout_key"
        android:title="@string/Logout"
        android:persistent="false">
    </PreferenceScreen>
    <PreferenceScreen
        android:key="exit_key"
        android:title="@string/Exit"
        android:persistent="false">
    </PreferenceScreen>
</PreferenceScreen>