<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >
            <sep.software.anicare.view.AniCareTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/period"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <EditText
                android:id="@+id/from_period"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" ~ "
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/to_period"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <sep.software.anicare.view.AniCareTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/pet_setting_category"
                android:textSize="18sp"
                />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pet_setting_category"
                android:layout_weight="1"
                android:entries="@array/pet_category"
                android:prompt="@string/pet_setting_category"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <sep.software.anicare.view.AniCareTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/pet_setting_size"
                android:textSize="18sp"
                />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:checkedButton="@+id/pet_size_medium"
                android:id="@+id/pet_size">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_large"
                    android:id="@+id/pet_size_large"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_medium"
                    android:id="@+id/pet_size_medium"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_small"
                    android:id="@+id/pet_size_small"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp">

        </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <sep.software.anicare.view.AniCareButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_remove"
            android:id="@+id/cancel"
            android:layout_margin="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <sep.software.anicare.view.AniCareButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_confirm"
            android:layout_margin="10dp"
            android:id="@+id/confirm"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

    </LinearLayout>

    </LinearLayout>
</ScrollView>